wayland/outputdevice: add missing scheduleDone calls

BUG: 507087